--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
