--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,8 @@
-{}
+{
+  "bracketSameLine": true,
+  "printWidth": 80,
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "all"
+}
