--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean": "rm -rf node_modules yarn.lock"
   },
   "dependencies": {
     "next": "14.0.2",
