--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,13 @@
 {
   "recommendations": [
     "aaron-bond.better-comments",
+    "bradlc.vscode-tailwindcss",
     "dbaeumer.vscode-eslint",
     "esbenp.prettier-vscode",
     "formulahendry.auto-close-tag",
     "formulahendry.auto-rename-tag",
+    "mikestead.dotenv",
+    "orta.vscode-jest",
     "sonarsource.sonarlint-vscode",
     "streetsidesoftware.code-spell-checker",
     "usernamehw.errorlens",
