--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,5 @@
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
   },
-  "i18n-ally.localesPaths": ["messages"]
+  "i18n-ally.localesPaths": ["src/i18n/*"]
 }
