--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,5 +36,9 @@
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
   },
-  "i18n-ally.localesPaths": ["src/i18n", "src/i18n/messages"]
+  "i18n-ally.localesPaths": [
+    "src/i18n",
+    "src/i18n/locales",
+    "src/i18n/messages"
+  ]
 }
