--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
+  "packageManager": "yarn@1.22.1",
   "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
-  },
-  "packageManager": "yarn@1.22.1"
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  }
 }
