--- a/package.json
+++ b/package.json
@@ -42,18 +42,19 @@
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-tailwindcss": "^3.14.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "postcss": "^8",
-    "prettier": "3.1.0",
+    "prettier": "^3.1.0",
     "storybook": "^7.6.16",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
