fix i18n ally path

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,6 @@
   "[shellscript]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
   },
-  "i18n-ally.localesPaths": ["src/messages"],
+  "i18n-ally.localesPaths": ["messages"],
   "cSpell.language": "en,fr"
 }
