--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,24 +2,38 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2020": true
+    "es2021": true
   },
   "extends": [
     "next/core-web-vitals",
-    "eslint:recommended",
+    // "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
+    // "plugin:react-hooks/recommended",
     "plugin:react/jsx-runtime",
-    "plugin:tailwindcss/recommended",
-    "plugin:import/recommended",
-    "plugin:import/typescript",
-    "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "plugin:storybook/recommended"
+    // "plugin:tailwindcss/recommended",
+    // "plugin:import/recommended",
+    // "plugin:import/typescript",
+    // "plugin:storybook/recommended",
+    // "plugin:@typescript-eslint/recommended",
+    "prettier"
   ],
-  "ignorePatterns": ["dist", ".eslintrc.cjs"],
+  "overrides": [
+    {
+      "env": {
+        "node": true
+      },
+      "files": [".eslintrc.{js,cjs}"],
+      "parserOptions": {
+        "sourceType": "script"
+      }
+    }
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh", "prettier"],
+  "plugins": ["react", "react-refresh"],
   "rules": {
     "import/order": [
       2,
@@ -122,7 +136,7 @@
     // "sort-imports": 1,
     "prettier/prettier": "error",
     // React
-    "react/jsx-newline": 1,
+    // "react/jsx-newline": 1,
     "react/jsx-no-useless-fragment": [2, { "allowExpressions": true }],
     "react/jsx-sort-props": [1, { "ignoreCase": true }],
 
