--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
   "bracketSameLine": true,
+  "jsxSingleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
   "printWidth": 80,
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "es5"
 }
