--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,9 @@
     // "plugin:import/recommended",
     // "plugin:import/typescript",
     "plugin:storybook/recommended",
-    // "plugin:@typescript-eslint/recommended",
-    "prettier"
+    // "plugin:prettier/recommended",
+    "plugin:@typescript-eslint/recommended"
+    // "prettier"
   ],
   "overrides": [
     {
