--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   },
   "packageManager": "yarn@1.22.1",
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx,css,md}": "prettier --write"
   }
 }
