--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,17 @@
 {
-  "bracketSameLine": true,
-  "plugins": ["prettier-plugin-tailwindcss"],
   "printWidth": 80,
-  "semi": true,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": false,
+  "quoteProps": "as-needed",
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf",
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
