--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,8 @@
 {
+  // See https://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
+  // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
+
+  // List of extensions which should be recommended for users of this workspace.
   "recommendations": [
     "aaron-bond.better-comments",
     "bradlc.vscode-tailwindcss",
@@ -13,5 +17,7 @@
     "streetsidesoftware.code-spell-checker",
     "usernamehw.errorlens",
     "wix.vscode-import-cost"
-  ]
+  ],
+  // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
+  "unwantedRecommendations": []
 }
