--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "next-intl": "^3.14.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
