--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "next-intl": "^3.14.1",
     "react": "^18",
     "react-dom": "^18",
