--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "next/core-web-vitals",
+    "plugin:jest/recommended",
     "plugin:tailwindcss/recommended",
     "prettier"
   ],
