add middleware to handle protected routes

--- a/.prettierrc
+++ b/.prettierrc
@@ -18,6 +18,7 @@
     "^react(.*)$",
     "^next$",
     "^next/(.*)$",
+    "^next-(.*)$",
     "<THIRD_PARTY_MODULES>",
     "^@/api/(.*)$",
     "^@/assets/(.*)$",
