--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
     "next/core-web-vitals",
     "plugin:jest/recommended",
     "plugin:tailwindcss/recommended",
-    "prettier"
+    "plugin:prettier/recommended"
   ],
   "rules": {
     // C
