--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "format": "npx prettier . --check",
-    "format:fix": "npx prettier . --write",
+    "format": "prettier . --check",
+    "format:fix": "prettier . --write",
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -43,6 +43,7 @@
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-tailwindcss": "^3.17.3",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
