add routes general

--- a/.prettierrc
+++ b/.prettierrc
@@ -27,6 +27,7 @@
     "^@/hooks/(.*)$",
     "^@/i18n/(.*)$",
     "^@/lib/(.*)$",
+    "^@/routes/(.*)$",
     "^@/styles/(.*)$",
     "^@/types/(.*)$",
     "^@/utils/(.*)$",
