--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-intl": "^3.14.1",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
