--- a/.prettierrc
+++ b/.prettierrc
@@ -24,6 +24,7 @@
     "^@/assets/(.*)$",
     "^@/components/(.*)$",
     "^@/constants/(.*)$",
+    "^@/config/(.*)$",
     "^@/hooks/(.*)$",
     "^@/i18n/(.*)$",
     "^@/lib/(.*)$",
