--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.3.0",
+    "@clerk/nextjs": "^5.2.6",
     "@hookform/resolvers": "^3.6.0",
     "@neondatabase/serverless": "^0.9.1",
     "@prisma/adapter-neon": "^5.15.1",
@@ -33,13 +34,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.51.11",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.19",
     "next-intl": "^3.14.1",
     "next-themes": "^0.3.0",
     "react": "^18",
@@ -51,6 +52,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.51.12",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
