--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "jest/globals": true
+  },
   "extends": [
     "next/core-web-vitals",
     "plugin:import/recommended",
@@ -10,6 +15,7 @@
   ],
   // Avoid run eslint on shadcn folder
   "ignorePatterns": ["**/components/ui/**"],
+  "plugins": ["jest"],
   "rules": {
     // C
     "camelcase": "warn",
