--- a/package.json
+++ b/package.json
@@ -51,6 +51,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@commitlint/types": "^19.5.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -58,6 +61,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.10",
+    "conventional-changelog-atom": "^5.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "^9.1.0",
