--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ CLERK_SECRET_KEY=sk_test_clerk_secret_key
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL="/sign-in"
 NEXT_PUBLIC_CLERK_SIGN_UP_URL="/sign-up"
+
+SIGNING_SECRET="whsec_test_signing_secret"
