feat: strat implementing features
- Create features folder and impplement logic for user creation
- Add packages for react-query
- Add type and lib for react-query
- Update import on webhooks

--- a/.prettierrc
+++ b/.prettierrc
@@ -28,6 +28,7 @@
     "^@/config/(.*)$",
     "^@/constants/(.*)$",
     "^@/context/(.*)$",
+    "^@/features/(.*)$",
     "^@/hooks/(.*)$",
     "^@/i18n/(.*)$",
     "^@/lib/(.*)$",
