--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
-    "lucide-react": "^0.476.0",
+    "lucide-react": "^0.477.0",
     "next": "15.2.1",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
@@ -67,7 +69,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^16.0.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@types/ws": "^8.5.10",
